deployment/kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitcoinisitascam-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
  selector:
    app: bitcoinisitascam
