deployment/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-bitcoinisitascam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: bitcoinisitascam.com
    http:
      paths:
      - path: /
        backend:
          serviceName: bitcoinisitascam-service
          servicePort: 80
